petclinic--deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 54.180.16.187:8000/repo-spring-petclinic-rest/spring-petclinic-rest:latest
        ports:
        - containerPort: 9966
      imagePullSecrets:
      - name: harbor-credentials
